# broh5

./: .gitignore  README.md  generate_exe.py  pyproject.toml  requirements.txt  setup.py
broh5/: main.py
broh5/lib/: interactions.py  rendering.py  utilities.py
monolithic_codebase/: README.md  setup.py
monolithic_codebase/broh5_mono/: main.py
monolithic_codebase/broh5_mono/util/: components.py  tools.py
